Add update method for simple order api and add unit tests for it.
