# cmd/models/request/updateOrderRequest.go
@@ -1,0 +1,11 @@
+package request
+
+type UpdateOrderRequest struct {
+	FirstName    string  `json:"firstName"`
+	LastName     string  `json:"lastName"`
+	TotalAmount  float32 `json:"totalAmount"`
+	Address      string  `json:"address"`
+	City         string  `json:"city"`
+	District     string  `json:"district"`
+	CurrencyCode string  `json:"currencyCode"`
+}
